--- a/HW/assignment2/BatchNormalization.ipynb
+++ b/HW/assignment2/BatchNormalization.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -28,8 +28,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "run the following from the cs294_129 directory and try again:\n",
+      "python setup.py build_ext --inplace\n",
+      "You may also need to restart your iPython kernel\n"
      ]
     }
    ],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -107,10 +108,10 @@
      "output_type": "stream",
      "text": [
       "Before batch normalization:\n",
-      "  means:  [ 7.07004881  1.41252908 -1.78964717]\n",
-      "  stds:  [ 34.92508243  35.55571731  31.59136601]\n",
+      "  means:  [-15.79043805  -4.63240452  -8.32486669]\n",
+      "  stds:  [ 30.92966017  27.64908322  31.46345656]\n",
       "After batch normalization (gamma=1, beta=0)\n",
-      "  mean:  [ -5.99520433e-17   2.99933689e-17  -1.26287869e-17]\n",
+      "  mean:  [  3.24185123e-16  -7.27196081e-17  -1.36002321e-17]\n",
       "  std:  [ 1.  1.  1.]\n",
       "After batch normalization (nontrivial gamma, beta)\n",
       "  means:  [ 11.  12.  13.]\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -160,8 +161,8 @@
      "output_type": "stream",
      "text": [
       "After batch normalization (test-time):\n",
-      "  means:  [-0.11260638 -0.00886982 -0.03266442]\n",
-      "  stds:  [ 1.02903819  1.03929601  0.98617488]\n"
+      "  means:  [-0.02968581  0.00183805 -0.0149284 ]\n",
+      "  stds:  [ 1.00433996  0.95840992  1.05127203]\n"
      ]
     }
    ],
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -217,9 +218,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "gamma [-1.20115961 -0.94896742  0.61252064  0.63684536 -1.02569076]\n",
+      "dout [[-0.2974199  -1.29994129 -0.2607957   0.42906214  1.47634156]\n",
+      " [ 0.94727379 -0.44287515  2.60362007 -0.09838756 -0.71625605]\n",
+      " [ 0.00482639 -0.87548275  0.1920475   0.88808209  0.91111272]\n",
+      " [ 1.55695167  0.49695151  1.66508152 -0.0755266   1.9914073 ]]\n",
+      "x1 [[-1.56150932 -0.40064471  0.19571097  0.06964573  0.06297567]\n",
+      " [-0.1782251  -1.40208998  1.48294087 -1.19210415 -1.3925703 ]\n",
+      " [ 0.77879991  0.54873345 -0.41882171 -0.42469186 -0.10099347]\n",
+      " [ 0.96093452  1.25400124 -1.25983013  1.54715028  1.43058811]]\n",
+      "x [[  4.89630938  11.37077248  10.63136055  10.3823442   16.54895543]\n",
+      " [  9.8646736    5.89133152  14.74488958   3.63612499  12.36691719]\n",
+      " [ 13.30203574  16.56532659   8.66753265   7.7392611   16.0778434 ]\n",
+      " [ 13.95621154  20.42422266   5.97996882  18.28214247  20.47834526]]\n",
       "dx error:  1.0\n",
-      "dgamma error:  1.0\n",
-      "dbeta error:  1.0\n"
+      "dgamma error:  5.84393969892e-12\n",
+      "[ 1.79548337  1.28453655  1.63182051 -0.34684168  3.84727767]\n",
+      "[ 1.79548337  1.28453655  1.63182051 -0.34684168  3.84727767]\n",
+      "dbeta error:  3.27560257004e-12\n"
      ]
     }
    ],
@@ -245,6 +261,8 @@
     "dx, dgamma, dbeta = batchnorm_backward(dout, cache)\n",
     "print 'dx error: ', rel_error(dx_num, dx)\n",
     "print 'dgamma error: ', rel_error(da_num, dgamma)\n",
+    "print da_num\n",
+    "print dgamma\n",
     "print 'dbeta error: ', rel_error(db_num, dbeta)"
    ]
   },
@@ -262,11 +280,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx difference: "
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'float' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-e2bfd7c86353>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mt3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dx difference: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdx2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dgamma difference: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdgamma1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdgamma2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'dbeta difference: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdbeta1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdbeta2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-e3b9911e1a98>\u001b[0m in \u001b[0;36mrel_error\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrel_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m   \u001b[0;34m\"\"\" returns relative error \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1e-8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'float' and 'NoneType'"
+     ]
+    }
+   ],
    "source": [
     "N, D = 100, 500\n",
     "x = 5 * np.random.randn(N, D) + 12\n",
@@ -553,7 +591,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
