--- a/HW/assignment2/FullyConnectedNets.ipynb
+++ b/HW/assignment2/FullyConnectedNets.ipynb
@@ -1408,13 +1408,22 @@
    },
    "outputs": [],
    "source": [
-    "best_model = None\n",
+    "hidden_dims = [50]\n",
     "################################################################################\n",
     "# TODO: Train the best FullyConnectedNet that you can on CIFAR-10. You might   #\n",
     "# batch normalization and dropout useful. Store your best model in the         #\n",
     "# best_model variable.                                                         #\n",
     "################################################################################\n",
-    "pass\n",
+    "bn_model = FullyConnectedNet(hidden_dims, weight_scale=0.01, use_batchnorm=True\n",
+    "                            dropout=0.5)\n",
+    "bn_solver = Solver(bn_model, small_data,\n",
+    "              num_epochs=10, batch_size=50,\n",
+    "              update_rule='adam',\n",
+    "              optim_config={\n",
+    "                'learning_rate': 1e-3,\n",
+    "              },\n",
+    "              verbose=False, print_every=200)\n",
+    "bn_solver.train()\n",
     "################################################################################\n",
     "#                              END OF YOUR CODE                                #\n",
     "################################################################################"
