--- a/HW/04_assignment/DQN.ipynb
+++ b/HW/04_assignment/DQN.ipynb
@@ -33,19 +33,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named gym",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c285bbec8689>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'matplotlib inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named gym"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -66,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nsteps = 10001                       # Number of steps to run (game actions per environment)\n",
+    "nsteps = 50001                       # Number of steps to run (game actions per environment)\n",
     "npar = 16                            # Number of parallel environments\n",
     "target_window = 200                  # Interval to update target estimator from q-estimator\n",
     "discount_factor = 0.99               # Reward discount factor\n",
-    "printsteps = 1000                    # Number of steps between printouts\n",
+    "printsteps = 5000                    # Number of steps between printouts\n",
     "render = False                       # Whether to render an environment while training\n",
     "\n",
     "epsilon_start = 1.0                  # Parameters for epsilon-greedy policy: initial epsilon\n",
@@ -107,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -198,6 +186,16 @@
     "    ##                                                                              ##\n",
     "    ##################################################################################\n",
     "        loss = 0.0\n",
+    "        rew, h = self.forward(s)\n",
+    "        Q = np.amax(rew, axis=0)\n",
+    "        loss = np.sum((Q-y)**2)/np.sqrt(npar)\n",
+    "        dQ = -(y-Q).reshape((1,-1))  #!!!sign\n",
+    "        mask = np.where(h>0, np.ones_like(h), np.zeros_like(h))\n",
+    "        \n",
+    "        #for i, dq in enumerate(dQ):\n",
+    "        self.grad['W2'][a] += (h*dQ).T\n",
+    "        gradh = (dQ*self.model['W2'][a].T*mask)#.reshape((-1,1))\n",
+    "        self.grad['W1'] += np.dot(gradh,s.T)\n",
     "        return loss\n",
     "    \n",
     "    \n",
@@ -227,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +247,12 @@
     "    ##                                                                              ##\n",
     "    ##################################################################################\n",
     "\n",
-    "    A = np.zeros((nactions, npar)) \n",
+    "    A = np.zeros((nactions, npar))\n",
+    "    A += epsilon/nactions\n",
+    "    actions = np.argmax(estimator.predict(state), axis=0) #orig naction by npar\n",
+    "    for i, act in enumerate(actions):\n",
+    "        A[act,i] += 1-epsilon\n",
+    "    \n",
     "    return A"
    ]
   },
@@ -262,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -286,11 +289,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing games...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2016-11-21 18:24:54,133] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,236] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,292] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,348] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,426] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,506] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,540] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,623] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,700] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,721] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,761] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,869] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,877] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,964] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,981] Making new env: CartPole-v0\n",
+      "[2016-11-21 18:24:54,992] Making new env: CartPole-v0\n"
+     ]
+    }
+   ],
    "source": [
     "block_reward = 0.0;\n",
     "total_epochs = 0;\n",
@@ -314,6 +347,20 @@
     "\n",
     "for i in range(npar):\n",
     "    envs[i] = gym.make(game_type)\n",
+    "    n_step = np.random.randint(nwindow, init_moves)\n",
+    "    for j in xrange(n_step):\n",
+    "        action = np.random.choice(VALID_ACTIONS)\n",
+    "        observation, reward, done, info = envs[i].step(action)\n",
+    "        rewards[i] = reward\n",
+    "        state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
+    "        block_reward += reward\n",
+    "        if done:\n",
+    "            observation = envs[i].reset()\n",
+    "            #state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
+    "            total_epochs += 1\n",
+    "            #rewards[i] = 0\n",
+    "            \n",
+    "    \n",
     "   \n",
     "    ##################################################################################\n",
     "    ##                                                                              ##\n",
@@ -338,12 +385,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0, time 0.0, loss 0.00080334, epochs 603, reward/epoch 21.65008\n",
+      "step 5000, time 8.6, loss 672090.29205293, epochs 3707, reward/epoch 25.77320\n",
+      "step 10000, time 17.3, loss 8538142.22232190, epochs 6960, reward/epoch 24.59268\n",
+      "step 15000, time 25.9, loss 36665731.46160610, epochs 12109, reward/epoch 15.53700\n",
+      "step 20000, time 34.7, loss 65454574.32375095, epochs 18361, reward/epoch 12.79591\n",
+      "step 25000, time 43.2, loss 62793355.15188906, epochs 25307, reward/epoch 11.51742\n",
+      "step 30000, time 51.7, loss 47957607.77605067, epochs 32451, reward/epoch 11.19821\n",
+      "step 35000, time 60.1, loss 47869637.66197909, epochs 39597, reward/epoch 11.19507\n",
+      "step 40000, time 68.6, loss 47858930.03833648, epochs 46728, reward/epoch 11.21862\n",
+      "step 45000, time 77.1, loss 47893458.32974949, epochs 53897, reward/epoch 11.15916\n",
+      "step 50000, time 85.7, loss 47928544.41434275, epochs 61056, reward/epoch 11.17475\n"
+     ]
+    }
+   ],
    "source": [
     "t0 = time.time()\n",
     "block_loss = 0.0\n",
@@ -351,7 +416,30 @@
     "\n",
     "for istep in np.arange(nsteps): \n",
     "    if (render): envs[0].render()\n",
-    "  \n",
+    "    epsilon = epsilons[istep] if istep < neps else epsilon_end\n",
+    "    learning_rate = learning_rates[istep] if istep < nlr else lr_end\n",
+    "    update_estimator(target_estimator, q_estimator, target_window, istep)\n",
+    "    \n",
+    "    A = policy(q_estimator, state, epsilon)\n",
+    "    for i, env in enumerate(envs):\n",
+    "        actions[i] = np.random.choice(VALID_ACTIONS, p=A[:,i])\n",
+    "        observation, reward, done, info = env.step(actions[i])\n",
+    "        rewards[i] = reward\n",
+    "        block_reward += reward\n",
+    "        state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
+    "        if done:\n",
+    "            observation = envs[i].reset()\n",
+    "            #state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
+    "            total_epochs += 1\n",
+    "            #rewards[i] = 0\n",
+    "    Q_score = target_estimator.predict(state)\n",
+    "    target = np.amax(Q_score, axis=0)\n",
+    "    y = rewards + discount_factor*target\n",
+    "    loss = q_estimator.gradient(state, actions, y)\n",
+    "    block_loss += loss\n",
+    "    q_estimator.rmsprop(learning_rate, decay_rate)\n",
+    "    \n",
+    "\n",
     "    #########################################################################\n",
     "    ## TODO: Implement Q-Learning                                          ##\n",
     "    ##                                                                     ##\n",
@@ -384,6 +472,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print A\n",
+    "np.random.choice(VALID_ACTIONS, p=A[:,i])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -429,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -470,9 +589,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:pygen2]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-pygen2-py"
   },
   "language_info": {
    "codemirror_mode": {
