--- a/HW/04_assignment/DQN.ipynb
+++ b/HW/04_assignment/DQN.ipynb
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nsteps = 50001                       # Number of steps to run (game actions per environment)\n",
+    "nsteps = 10001                       # Number of steps to run (game actions per environment)\n",
     "npar = 16                            # Number of parallel environments\n",
     "target_window = 200                  # Interval to update target estimator from q-estimator\n",
     "discount_factor = 0.99               # Reward discount factor\n",
-    "printsteps = 5000                    # Number of steps between printouts\n",
+    "printsteps = 1000                    # Number of steps between printouts\n",
     "render = False                       # Whether to render an environment while training\n",
     "\n",
     "epsilon_start = 1.0                  # Parameters for epsilon-greedy policy: initial epsilon\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -187,12 +187,10 @@
     "    ##################################################################################\n",
     "        loss = 0.0\n",
     "        rew, h = self.forward(s)\n",
-    "        Q = np.amax(rew, axis=0)\n",
+    "        Q = rew[a, np.arange(a.size)]\n",
     "        loss = np.sum((Q-y)**2)/np.sqrt(npar)\n",
-    "        dQ = -(y-Q).reshape((1,-1))  #!!!sign\n",
+    "        dQ = (y-Q).reshape((1,-1))*2./np.sqrt(npar)  #!!!sign\n",
     "        mask = np.where(h>0, np.ones_like(h), np.zeros_like(h))\n",
-    "        \n",
-    "        #for i, dq in enumerate(dQ):\n",
     "        self.grad['W2'][a] += (h*dQ).T\n",
     "        gradh = (dQ*self.model['W2'][a].T*mask)#.reshape((-1,1))\n",
     "        self.grad['W1'] += np.dot(gradh,s.T)\n",
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -305,22 +303,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2016-11-21 18:24:54,133] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,236] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,292] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,348] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,426] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,506] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,540] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,623] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,700] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,721] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,761] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,869] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,877] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,964] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,981] Making new env: CartPole-v0\n",
-      "[2016-11-21 18:24:54,992] Making new env: CartPole-v0\n"
+      "[2016-11-21 22:26:39,273] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,361] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,475] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,500] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,566] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,627] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,702] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,794] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,830] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,895] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,922] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:39,959] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:40,029] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:40,081] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:40,187] Making new env: CartPole-v0\n",
+      "[2016-11-21 22:26:40,216] Making new env: CartPole-v0\n"
      ]
     }
    ],
@@ -340,6 +338,7 @@
     "print(\"Initializing games...\"); sys.stdout.flush()\n",
     "envs = np.empty(npar, dtype=object)\n",
     "state = np.zeros([nfeats * nwindow, npar], dtype=float)\n",
+    "new_state = np.zeros([nfeats * nwindow, npar], dtype=float)\n",
     "rewards = np.zeros([npar], dtype=float)\n",
     "dones = np.empty(npar, dtype=int)\n",
     "actions = np.zeros([npar], dtype=int)\n",
@@ -385,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -395,17 +394,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0, time 0.0, loss 0.00080334, epochs 603, reward/epoch 21.65008\n",
-      "step 5000, time 8.6, loss 672090.29205293, epochs 3707, reward/epoch 25.77320\n",
-      "step 10000, time 17.3, loss 8538142.22232190, epochs 6960, reward/epoch 24.59268\n",
-      "step 15000, time 25.9, loss 36665731.46160610, epochs 12109, reward/epoch 15.53700\n",
-      "step 20000, time 34.7, loss 65454574.32375095, epochs 18361, reward/epoch 12.79591\n",
-      "step 25000, time 43.2, loss 62793355.15188906, epochs 25307, reward/epoch 11.51742\n",
-      "step 30000, time 51.7, loss 47957607.77605067, epochs 32451, reward/epoch 11.19821\n",
-      "step 35000, time 60.1, loss 47869637.66197909, epochs 39597, reward/epoch 11.19507\n",
-      "step 40000, time 68.6, loss 47858930.03833648, epochs 46728, reward/epoch 11.21862\n",
-      "step 45000, time 77.1, loss 47893458.32974949, epochs 53897, reward/epoch 11.15916\n",
-      "step 50000, time 85.7, loss 47928544.41434275, epochs 61056, reward/epoch 11.17475\n"
+      "step 0, time 0.0, loss 0.00669254, epochs 716, reward/epoch 22.81006\n",
+      "step 1000, time 1.8, loss 0.04763762, epochs 1444, reward/epoch 21.97802\n",
+      "step 2000, time 3.6, loss 0.04594425, epochs 2181, reward/epoch 21.70963\n",
+      "step 3000, time 5.3, loss 0.05040975, epochs 2959, reward/epoch 20.56555\n",
+      "step 4000, time 7.1, loss 0.04540683, epochs 3810, reward/epoch 18.80141\n",
+      "step 5000, time 8.8, loss 0.03540573, epochs 4628, reward/epoch 19.55990\n",
+      "step 6000, time 10.5, loss 0.02456312, epochs 5555, reward/epoch 17.25998\n",
+      "step 7000, time 12.3, loss 0.01789964, epochs 6638, reward/epoch 14.77378\n",
+      "step 8000, time 14.1, loss 0.03358363, epochs 8021, reward/epoch 11.56905\n",
+      "step 9000, time 15.9, loss 1.75290062, epochs 9719, reward/epoch 9.42285\n",
+      "step 10000, time 17.7, loss 1.75412424, epochs 11422, reward/epoch 9.39518\n"
      ]
     }
    ],
@@ -426,18 +425,20 @@
     "        observation, reward, done, info = env.step(actions[i])\n",
     "        rewards[i] = reward\n",
     "        block_reward += reward\n",
-    "        state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
+    "        new_state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
     "        if done:\n",
     "            observation = envs[i].reset()\n",
     "            #state[:,i] = np.concatenate((state[nfeats:,i], preprocess(observation)))\n",
     "            total_epochs += 1\n",
     "            #rewards[i] = 0\n",
-    "    Q_score = target_estimator.predict(state)\n",
+    "    Q_score = target_estimator.predict(new_state)\n",
     "    target = np.amax(Q_score, axis=0)\n",
     "    y = rewards + discount_factor*target\n",
     "    loss = q_estimator.gradient(state, actions, y)\n",
     "    block_loss += loss\n",
     "    q_estimator.rmsprop(learning_rate, decay_rate)\n",
+    "    \n",
+    "    state = new_state\n",
     "    \n",
     "\n",
     "    #########################################################################\n",
