--- a/HW/04_assignment/DQN.ipynb
+++ b/HW/04_assignment/DQN.ipynb
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nsteps = 10001                       # Number of steps to run (game actions per environment)\n",
+    "nsteps = 20001                       # Number of steps to run (game actions per environment)\n",
     "npar = 16                            # Number of parallel environments\n",
     "target_window = 200                  # Interval to update target estimator from q-estimator\n",
     "discount_factor = 0.99               # Reward discount factor\n",
-    "printsteps = 1000                    # Number of steps between printouts\n",
+    "printsteps = 2000                    # Number of steps between printouts\n",
     "render = False                       # Whether to render an environment while training\n",
     "\n",
     "epsilon_start = 1.0                  # Parameters for epsilon-greedy policy: initial epsilon\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -188,10 +188,12 @@
     "        loss = 0.0\n",
     "        rew, h = self.forward(s)\n",
     "        Q = rew[a, np.arange(a.size)]\n",
-    "        loss = np.sum((Q-y)**2)/np.sqrt(npar)\n",
-    "        dQ = (y-Q).reshape((1,-1))*2./np.sqrt(npar)  #!!!sign\n",
+    "        loss = np.sum((Q-y)**2)/np.sqrt(npar)/np.sqrt(npar)\n",
+    "        dQ = -(y-Q).reshape((1,-1))*2./np.sqrt(npar)/np.sqrt(npar)  #!!!sign\n",
     "        mask = np.where(h>0, np.ones_like(h), np.zeros_like(h))\n",
-    "        self.grad['W2'][a] += (h*dQ).T\n",
+    "#         self.grad['W2'][a] += (h*dQ).T\n",
+    "        for i, A in enumerate(a):\n",
+    "            self.grad['W2'][A] += (h*dQ).T[i]\n",
     "        gradh = (dQ*self.model['W2'][a].T*mask)#.reshape((-1,1))\n",
     "        self.grad['W1'] += np.dot(gradh,s.T)\n",
     "        return loss\n",
@@ -202,7 +204,7 @@
     "        for k in self.model:\n",
     "            g = self.grad[k]\n",
     "            self.gradsq[k] = decay_rate * self.gradsq[k] + (1 - decay_rate) * g*g\n",
-    "            self.model[k] += learning_rate * g / (np.sqrt(self.gradsq[k]) + 1e-5)\n",
+    "            self.model[k] -= learning_rate * g / (np.sqrt(self.gradsq[k]) + 1e-5)\n",
     "            self.grad[k].fill(0.0)"
    ]
   },
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -303,22 +305,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2016-11-21 22:26:39,273] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,361] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,475] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,500] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,566] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,627] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,702] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,794] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,830] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,895] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,922] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:39,959] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:40,029] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:40,081] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:40,187] Making new env: CartPole-v0\n",
-      "[2016-11-21 22:26:40,216] Making new env: CartPole-v0\n"
+      "[2016-11-22 12:43:34,503] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,535] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,581] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,621] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,652] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,656] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,694] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,733] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,757] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,779] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,817] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,824] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,869] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,921] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,964] Making new env: CartPole-v0\n",
+      "[2016-11-22 12:43:34,978] Making new env: CartPole-v0\n"
      ]
     }
    ],
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -394,17 +396,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0, time 0.0, loss 0.00669254, epochs 716, reward/epoch 22.81006\n",
-      "step 1000, time 1.8, loss 0.04763762, epochs 1444, reward/epoch 21.97802\n",
-      "step 2000, time 3.6, loss 0.04594425, epochs 2181, reward/epoch 21.70963\n",
-      "step 3000, time 5.3, loss 0.05040975, epochs 2959, reward/epoch 20.56555\n",
-      "step 4000, time 7.1, loss 0.04540683, epochs 3810, reward/epoch 18.80141\n",
-      "step 5000, time 8.8, loss 0.03540573, epochs 4628, reward/epoch 19.55990\n",
-      "step 6000, time 10.5, loss 0.02456312, epochs 5555, reward/epoch 17.25998\n",
-      "step 7000, time 12.3, loss 0.01789964, epochs 6638, reward/epoch 14.77378\n",
-      "step 8000, time 14.1, loss 0.03358363, epochs 8021, reward/epoch 11.56905\n",
-      "step 9000, time 15.9, loss 1.75290062, epochs 9719, reward/epoch 9.42285\n",
-      "step 10000, time 17.7, loss 1.75412424, epochs 11422, reward/epoch 9.39518\n"
+      "step 0, time 0.0, loss 0.00061273, epochs 823, reward/epoch 22.72053\n",
+      "step 2000, time 1.9, loss 0.01214262, epochs 2301, reward/epoch 21.65088\n",
+      "step 4000, time 3.7, loss 0.01650472, epochs 3876, reward/epoch 20.31746\n",
+      "step 6000, time 5.6, loss 0.01670125, epochs 5448, reward/epoch 20.35623\n",
+      "step 8000, time 7.4, loss 0.01712360, epochs 7096, reward/epoch 19.41748\n",
+      "step 10000, time 9.3, loss 0.01304358, epochs 8779, reward/epoch 19.01367\n",
+      "step 12000, time 11.1, loss 0.00813318, epochs 10198, reward/epoch 22.55109\n",
+      "step 14000, time 12.9, loss 0.00404133, epochs 11979, reward/epoch 17.96743\n",
+      "step 16000, time 14.7, loss 0.00258630, epochs 14523, reward/epoch 12.57862\n",
+      "step 18000, time 16.6, loss 0.19812238, epochs 17949, reward/epoch 9.34034\n",
+      "step 20000, time 18.4, loss 0.19806880, epochs 21359, reward/epoch 9.38416\n"
      ]
     }
    ],
